--- a/app/views/shared/_spot_form.html.erb
+++ b/app/views/shared/_spot_form.html.erb
@@ -1,4 +1,4 @@
-    <%= form_with(model: @spot, local: true, url: form_url, html: { multipart: true, class: "space-y-6" }) do |f| %>
+    <%= form_with(model: @spot, local: true, url: form_url, html: { multipart: true, class: "space-y-6", data: { turbo: false }}) do |f| %>
       <!-- マーカー名称 -->
       <div>
         <%= f.label :name, class: "block font-medium text-gray-700 font-bold mb-1" do %>
@@ -46,6 +46,6 @@
 
       <!-- 投稿ボタン -->
       <div>
-        <%= f.submit "投稿", class: "bg-green-600 text-white font-semibold px-6 py-2 rounded-md hover:bg-green-700" %>
+        <%= f.submit "投稿", class: "bg-green-600 text-white font-semibold px-6 py-2 rounded-md hover:bg-green-700"%>
       </div>
     <% end %>
