2D250826_add:SuperAdmin_ServiceTag_indexページ追加

--- a/app/views/super_admin/shared/_sidebar.html.erb
+++ b/app/views/super_admin/shared/_sidebar.html.erb
@@ -5,5 +5,8 @@
   <li>
     <%= link_to 'posts 💬', super_admin_spots_path %>
   </li>
+  <li>
+    <%= link_to 'service_tags 🏷️✈️ ', super_admin_service_tags_path %>
+  </li>
 </ul>
 
