--- a/app/views/super_admin/shared/_sidebar.html.erb
+++ b/app/views/super_admin/shared/_sidebar.html.erb
@@ -8,5 +8,8 @@
   <li>
     <%= link_to 'service_tags 🏷️✈️ ', super_admin_service_tags_path %>
   </li>
+  <li>
+    <%= link_to 'season_tags 🏷️📅 ', super_admin_season_tags_path %>
+  </li>
 </ul>
 
