20250836_add:SuperAdmin_css_style画面ついか

--- a/app/views/super_admin/shared/_sidebar.html.erb
+++ b/app/views/super_admin/shared/_sidebar.html.erb
@@ -6,10 +6,13 @@
     <%= link_to 'posts 💬', super_admin_spots_path %>
   </li>
   <li>
-    <%= link_to 'service_tags 🏷️✈️ ', super_admin_service_tags_path %>
+    <%= link_to 'service_tags 🏷️✈️', super_admin_service_tags_path %>
   </li>
   <li>
-    <%= link_to 'season_tags 🏷️📅 ', super_admin_season_tags_path %>
+    <%= link_to 'season_tags 🏷️📅', super_admin_season_tags_path %>
+  </li>
+  <li>
+    <%= link_to 'css_styles 🎨', super_admin_css_styles_path %>
   </li>
 </ul>
 
