20250826_fix:SuperAdmin_各ページの題名を入力

--- a/app/views/super_admin/spots/index.html.erb
+++ b/app/views/super_admin/spots/index.html.erb
@@ -1,3 +1,5 @@
+<h1 class="text-3xl text-bold">Spots</h1>
+
 <% if @spots.present? %>
   <div class="overflow-x-auto">
     <table class="min-w-full border border-lime-400 text-sm text-left">
