--- a/app/views/super_admin/users/index.html.erb
+++ b/app/views/super_admin/users/index.html.erb
@@ -1,3 +1,5 @@
+<h1 class="text-3xl text-bold">Users</h1>
+
 <% if @users.present? %>
   <div class="overflow-x-auto">
     <table class="min-w-full border border-orange-400 text-sm text-left">
