--- a/app/views/super_admin/spots/show.html.erb
+++ b/app/views/super_admin/spots/show.html.erb
@@ -1,42 +1,42 @@
-<!-- app/views/spots/show.html.erb -->
+<h1 class="text-3xl text-bold">Spots</h1>
 
-  <div class="spot-detail">
-    <div class="spot-card bg-orange-200 rounded-lg border border-orange-700 p-4 space-y-6 max-w-5xl mx-auto">
-      <div class="flex flex-row justify-between px-8">
-        <h2 class="spot-title font-bold text-3xl mx-3 pt-2"><%= @spot.name %></h2>
-        <%= link_to '編集', edit_super_admin_spot_path(@spot), 
-          class: "bg-blue-500 hover:bg-blue-600 text-white px-8 py-3 rounded text-bold" %>
-      </div>
+<div class="spot-detail">
+  <div class="spot-card bg-orange-200 rounded-lg border border-orange-700 p-4 space-y-6 max-w-5xl mx-auto">
+    <div class="flex flex-row justify-between px-8">
+      <h2 class="spot-title font-bold text-3xl mx-3 pt-2"><%= @spot.name %></h2>
+      <%= link_to '編集', edit_super_admin_spot_path(@spot), 
+        class: "bg-blue-500 hover:bg-blue-600 text-white px-8 py-3 rounded text-bold" %>
+    </div>
 
-      <div class="spot-image">
-          <% if @spot.spot_image.attached? %>
-            <%= image_tag url_for(@spot.spot_image), class: "w-144 h-108 object-cover mx-auto" %>
-          <% else %>
-            <span class="text-gray-600 text-sm">画像</span>
-          <% end %>
-      </div>
+    <div class="spot-image">
+        <% if @spot.spot_image.attached? %>
+          <%= image_tag url_for(@spot.spot_image), class: "w-144 h-108 object-cover mx-auto" %>
+        <% else %>
+          <span class="text-gray-600 text-sm">画像</span>
+        <% end %>
+    </div>
 
-      <table class="spot-info">
-        <tr>
-          <th>タグ：</th>
-          <td>
-            <div class="tag">Coming Soon...</div>
-          </td>
-        </tr>
-        <tr>
-          <th>概要</th>
-          <td><%= @spot.summary %></td>
-        </tr>
-      </table>
+    <table class="spot-info">
+      <tr>
+        <th>タグ：</th>
+        <td>
+          <div class="tag">Coming Soon...</div>
+        </td>
+      </tr>
+      <tr>
+        <th>概要</th>
+        <td><%= @spot.summary %></td>
+      </tr>
+    </table>
 
-      <div class="map-container" id="map"></div>
+    <div class="map-container" id="map"></div>
 
-      <div class="near-spots-title">近くのスポット(Coming Soon...)</div>
-      <div class="near-spots-place">
+    <div class="near-spots-title">近くのスポット(Coming Soon...)</div>
+    <div class="near-spots-place">
 
-      </div>
     </div>
   </div>
+</div>
 
 <style>
   #map {
