--- a/app/views/shared/_spot_form.html.erb
+++ b/app/views/shared/_spot_form.html.erb
@@ -21,8 +21,10 @@
   <div>
     <p class="font-medium text-gray-700 mb-2">タグ選択（未実装）</p>
     <div class="flex gap-2 flex-wrap">
-      <% ["春", "夏", "秋", "冬", "通年", "期間限定"].each do |tag| %>
-        <span class="px-4 py-1 bg-gray-200 rounded-full text-gray-600 cursor-not-allowed"><%= tag %></span>
+      <% @season_tags.each do |tag| %>
+        <span class="<%= tag.css_style.style_daisyui %> px-4 py-1 rounded-full text-gray-600 cursor-not-allowed">
+          <%= tag.season %>
+        </span>
       <% end %>
     </div>
   </div>
