20250827_test:タグにCSSスタイル適用

--- a/app/views/shared/_spot_form.html.erb
+++ b/app/views/shared/_spot_form.html.erb
@@ -22,7 +22,7 @@
     <p class="font-medium text-gray-700 mb-2">タグ選択（未実装）</p>
     <div class="flex gap-2 flex-wrap">
       <% @season_tags.each do |tag| %>
-        <span class="<%= tag.css_style.style_daisyui %> px-4 py-1 rounded-full text-gray-600 cursor-not-allowed">
+        <span class="<%= tag.css_style.style_daisyui %>">
           <%= tag.season %>
         </span>
       <% end %>
