20250828_add:使い方ページ作成中

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -18,7 +18,7 @@
 </div>
 
 <div class="how-to-use text-bold text-2xl text-blue-500 mx-auto text-center">
-  <%= link_to "≫ 使い方はこちら ≪", how_to_use %>
+  <%= link_to "≫ 使い方はこちら (🚧工事中🚧) ≪", sorry_path, class: "hover:text-red-500" %>
 </div>
 
 <div class="flex flex-col gap-2 pt-10 mx-auto w-80">
