20250829_add:how_to_use/アイコン

--- a/app/views/top/how_to_use.html.erb
+++ b/app/views/top/how_to_use.html.erb
@@ -1,15 +1,38 @@
-<!-- ✅ キャラクター台詞 -->
-<div class="my-10 mx-auto text-center">
-  <h1>
-    え？私は埼玉県民じゃない…？
-  </h1>
+<div class="collapse bg-base-100 border-base-300 border">
+  <input type="checkbox" />
+  <div class="collapse-title font-semibold">
+    【STEP1】<br />
+    現在地から近くのスポットを探してみよう！
+  </div>
+  <div class="collapse-content text-sm">
+      <div role="tablist" class="tabs tabs-lift">
+    <input type="radio" name="my_tabs_3" class="tab text-xl" aria-label="①" />
+      <div class="tab-content bg-base-100 border-base-300 p-6">test</div>
 
-  <h1 class="text-3xl font-bold text-orange-500">
-    春日部つむぎ<br />
-    「お前が埼玉県民になるんだよ！」
-  </h1>
-  <h1 class="text-3xl font-bold text-lime-500 mt-6">
-    ずんだもん<br />
-    「えぇ…」
-  </h1>
+    <input type="radio" name="my_tabs_3" class="tab" aria-label="Tab 1" />
+      <div class="tab-content bg-base-100 border-base-300 p-6">Tab content 1</div>
+
+    <input type="radio" name="my_tabs_3" class="tab" aria-label="Tab 1" />
+      <div class="tab-content bg-base-100 border-base-300 p-6">Tab content 1</div>
+  </div>
+  </div>
+</div>
+
+
+
+  <!-- ✅ キャラクター台詞 -->
+  <div class="my-10 mx-auto text-center">
+    <h1>
+      え？私は埼玉県民じゃない…？
+    </h1>
+
+    <h1 class="text-3xl font-bold text-orange-500">
+      春日部つむぎ<br />
+      「お前が埼玉県民になるんだよ！」
+    </h1>
+    <h1 class="text-3xl font-bold text-lime-500 mt-6">
+      ずんだもん<br />
+      「えぇ…」
+    </h1>
+  </div>
 </div>
