--- a/app/views/spots/search.html.erb
+++ b/app/views/spots/search.html.erb
@@ -8,7 +8,7 @@
 <div id="map" class="h-80 w-full mb-4"></div>
 
 <!-- 近いスポット一覧 -->
-  <div class="max-w-5xl mx-auto">
+  <div class="max-w-5xl mx-auto px-4">
     <div id="spot-list" class="bg-orange-200 rounded-lg border border-orange-700 p-4 space-y-6">
       <p>近くのスポットを表示中...</p>
     </div>
