--- a/app/views/users/registrations/show.html.erb
+++ b/app/views/users/registrations/show.html.erb
@@ -1,4 +1,4 @@
-<div class="flex flex-col items-center pt-10">
+<div class="flex flex-col items-center pt-10 px-4">
   <div class="card w-full max-w-sm bg-orange-200 shadow-xl">
     <div class="card-body">
       <h2 class="card-title justify-center text-xl">アカウント情報</h2>
