--- a/app/views/your_spots/edit.html.erb
+++ b/app/views/your_spots/edit.html.erb
@@ -1,6 +1,8 @@
-<div class="spot-card bg-orange-200 rounded-lg border border-orange-700 p-4 space-y-6 max-w-5xl mx-auto">
-  <!-- 部分テンプレート shared/spot_form を読み込み、@spot を渡してフォームを表示 -->
-  <%= render 'shared/spot_form', spot: @spot %>
+<div class="pb-16 px-4">
+  <div class="spot-card bg-orange-200 rounded-lg border border-orange-700 space-y-6 max-w-5xl mx-auto">
+    <!-- 部分テンプレート shared/spot_form を読み込み、@spot を渡してフォームを表示 -->
+    <%= render 'shared/spot_form', spot: @spot %>
+  </div>
 </div>
 
 <!-- Google Maps API の読み込み -->
