--- a/app/views/your_spots/favorites.html.erb
+++ b/app/views/your_spots/favorites.html.erb
@@ -1,4 +1,4 @@
-<div class="pb-16">
+<div class="pb-16 px-4">
   <div class="max-w-5xl mx-auto">
     <!-- 全体の黄色背景ボックス -->
     <div class="bg-orange-200 rounded-lg border border-orange-700 p-4 space-y-6">
