--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
     </div>
 
     <div class="item-center pt-24 pb-24 min-h-screen">
-      <div class="container mx-auto">
+      <div class="container mx-auto px-4">
         <%= render 'shared/flash_message' %>
       </div>
       <%= yield %>
