--- a/app/views/spots/new.html.erb
+++ b/app/views/spots/new.html.erb
@@ -1,10 +1,8 @@
-<div class=" max-w-5xl mx-auto">
+<div class=" max-w-5xl mx-auto px-4">
 
   <!-- オレンジ色のカード風ボックス -->
   <div class="spot-card bg-orange-200 rounded-lg border border-orange-700 p-4 space-y-6">
     <!-- 部分テンプレートを呼び出してフォームを表示 -->
-
-    <!-- -->
     <%= render 'shared/spot_form', spot: @spot %>
   </div>
 </div>
