--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -12,7 +12,7 @@
     <% end %>
   </div>
 
-  <div class="spot-detail">
+  <div class="spot-detail px-4">
     <div class="spot-card bg-orange-200 rounded-lg border border-orange-700 p-4 space-y-6 max-w-5xl mx-auto">
       <h2 class="spot-title font-bold text-3xl mx-3 pt-2"><%= @spot.name %></h2>
 
@@ -32,7 +32,7 @@
           </td>
         </tr>
         <tr>
-          <th>概要</th>
+          <th>概要：</th>
           <td><%= @spot.summary %></td>
         </tr>
       </table>
