--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,4 +1,4 @@
-<div class="flex flex-col items-center pt-10">
+<div class="flex flex-col items-center pt-10 px-4">
   <div class="card w-full max-w-sm bg-orange-200 shadow-xl">
     <div class="card-body">
       <h1 class="card-title justify-center py-3">パスワード再発行</h1>
