20250922_add:how_to_use/ヘッダー追加

--- a/app/views/shared/common/_header.html.erb
+++ b/app/views/shared/common/_header.html.erb
@@ -12,15 +12,7 @@
       <%= image_tag 'question.png', alt: "読み込み中", class: "w-8 h-8" %>
     </label>
 
-    <!-- Put this part before </body> tag -->
-    <input type="checkbox" id="my_modal_7" class="modal-toggle" />
-    <div class="modal" role="dialog">
-      <div class="modal-box">
-        <h3 class="text-lg font-bold">Hello!</h3>
-        <p class="py-4">This modal works with a hidden checkbox!</p>
-      </div>
-      <label class="modal-backdrop" for="my_modal_7">Close</label>
-    </div>  
+    <%= render 'how_to_use/application' %>
     
     <%= link_to user_profile_path, class:"flex flex-col items-center font-bold flex-1 hover:text-yellow-600" do %>
       <svg class="h-6 w-6 text-yellow-800" fill="currentColor" viewBox="0 0 24 24">
@@ -30,5 +22,3 @@
     <% end %>
   </div>
 </div>
-
-  <!-- サブヘッダー -->
