--- a/app/views/shared/common/_before_login_header.html.erb
+++ b/app/views/shared/common/_before_login_header.html.erb
@@ -1,17 +1,23 @@
-  <!-- ヘッダー -->
-  <div class="flex items-center justify-between py-2">
-    <div class="text-3xl font-bold text-orange-600">
-      <a href="#" class="px-1">Saita<span class="text-yellow-400">Manear</span></a>
-    </div>
-    <div class="flex-none">
-      <%= link_to new_user_session_path, class: "flex flex-col items-center font-bold flex-1 hover:text-yellow-600" do %>
-        <svg class="h-6 w-6 text-yellow-800" fill="currentColor" viewBox="0 0 24 24">
-          <path d="M12 12c2.7 0 5-2.3 5-5s-2.3-5-5-5-5 2.3-5 5 2.3 5 5 5zm0 2c-3.3 0-10 1.7-10 5v3h20v-3c0-3.3-6.7-5-10-5z"/>
-        </svg>
-        <span>ログイン</span>
-      <% end %>
-    </div>
+<!-- ヘッダー -->
+<div class="flex items-center justify-between py-2">
+  <div class="text-3xl font-bold text-orange-600">
+    <a href="#" class="px-1">Saita<span class="text-yellow-400">Manear</span></a>
   </div>
 
-  <!-- サブヘッダー -->
-  <div class="bg-orange-300 text-sm p-1 px-3"></div>
+  <div class="flex flex-row">
+    <label 
+    for="my_modal_7" 
+    class="btn bg-transparent flex flex-col pt-1 border-none shadow-none hover:btn-ghost"
+    >
+      <%= image_tag 'header/question.png', alt: "読み込み中", class: "w-6 h-6" %>
+      <span>使い方</span>
+    </label>
+
+    <%= render 'how_to_use/application' %>
+
+    <%= link_to new_user_session_path, class:"btn btn-ghost flex flex-col items-center font-bold flex-1 min-w-0" do %>
+      <%= image_tag 'header/my_page.png', alt: "探索", class: "w-6 h-6" %>
+      <span>ログイン</span>
+    <% end %>
+  </div>
+</div>
