--- a/app/views/shared/common/_header.html.erb
+++ b/app/views/shared/common/_header.html.erb
@@ -7,17 +7,17 @@
   <div class="flex flex-row">
     <label 
     for="my_modal_7" 
-    class="btn bg-transparent border-none shadow-none hover:btn-ghost"
+    class="btn bg-transparent flex flex-col border-none shadow-none hover:btn-ghost"
     >
-      <%= image_tag 'question.png', alt: "読み込み中", class: "w-8 h-8" %>
+      <%= image_tag 'header/question.png', alt: "使い方", class: "w-6 h-6" %>
+      <span>使い方</span>
     </label>
 
     <%= render 'how_to_use/application' %>
     
-    <%= link_to user_profile_path, class:"flex flex-col items-center font-bold flex-1 hover:text-yellow-600" do %>
-      <svg class="h-6 w-6 text-yellow-800" fill="currentColor" viewBox="0 0 24 24">
-        <path d="M12 12c2.7 0 5-2.3 5-5s-2.3-5-5-5-5 2.3-5 5 2.3 5 5 5zm0 2c-3.3 0-10 1.7-10 5v3h20v-3c0-3.3-6.7-5-10-5z"/>
-      </svg>
+
+    <%= link_to user_profile_path, class:"btn btn-ghost flex flex-col border-none shadow-none" do %>
+      <%= image_tag 'header/my_page.png', alt: "マイページ", class: "w-6 h-6" %>
       <span>マイページ</span>
     <% end %>
   </div>
