20250926_add:how_to_use_default

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -12,13 +12,10 @@
   </p>
 
   <p class="py-4 text-lg text-gray-800 leading-relaxed">
-    「サイトにはあまり載っていない穴場」や「ちょっと変わったスポット」を発見！<br />
+    「サイトにあまり載っていない穴場」や<br />
+    「ちょっと変わったスポット」を発見！<br />
     埼玉で“寄り道”を楽しむためのサービスです。
   </p>
-</div>
-
-<div class="how-to-use text-bold text-2xl text-blue-500 mx-auto text-center">
-  <%= link_to "≫ 使い方はこちら (🚧工事中🚧) ≪", sorry_path, class: "hover:text-red-500" %>
 </div>
 
 <div class="flex flex-col gap-2 pt-10 mx-auto w-80">
