20250929_add:使い方：不明点文をテンプレ化

--- a/app/views/how_to_use/_default.html.erb
+++ b/app/views/how_to_use/_default.html.erb
@@ -20,12 +20,4 @@
   埼玉県で「サイトにあまり載っていない穴場」や「ちょっと変わったスポット」をGoogleMap上で見ることができます。<br />
 </p>
 
-
-<h2 class="flex items-center justify-center text-2xl font-semibold mb-4 border-4 border-orange-300 bg-orange-100 rounded-lg mt-4">
-  ご不明点につきまして
-</h2>
-
-<p>
-  本サイトのホームよりお問い合わせができます。<br />
-  そちらよりご連絡いただきますようお願い致します。
-</p>
+<%= render "how_to_use/default_question" %>
