20250929_fix:アップロードできる画像のサイズを追加

--- a/app/views/shared/_spot_form.html.erb
+++ b/app/views/shared/_spot_form.html.erb
@@ -15,6 +15,10 @@
       <span class="text-red-400 text-sm font-bold ml-2"> *必須</span>
     <% end %>
     <%= f.file_field :spot_image, class: "w-full bg-white" %>
+
+    <small class="form-text text-white-50">
+      ※ JPEG、PNG、WebP、HEIC形式（10MB以下）のみアップロード可能です
+    </small>
   </div>
 
   <!-- 概要 -->
