20250929_fix:footer_ｚ軸修正

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
       <%= yield %>
     </div>
 
-    <div class="fixed bottom-0 bg-green-500 flex w-full items-center text-xs py-2 border-t border- border-green-800 z-0">
+    <div class="fixed bottom-0 bg-green-500 flex w-full items-center text-xs py-2 border-t border-1 border-green-800 z-0">
         <%= render 'shared/common/footer' %>
     </div>
   </body>
