--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -1,5 +1,5 @@
 <!-- app/views/spots/show.html.erb -->
-  <div class="page-move flex flex-row justify-between pt-4 pb-4 mx-auto">
+  <div class="page-move flex flex-row justify-between pt-4 pb-4 mx-auto px-4">
     <%= link_to '＜ 探索に戻る', spots_path(lat: @spot.latitude, lng: @spot.longitude), class: 'back-link font-bold' %>
     <% if current_user %>
       <div class="flex justify-end">
