20250930_add:使い方/周辺検索ページ

--- a/app/views/how_to_use/_default.html.erb
+++ b/app/views/how_to_use/_default.html.erb
@@ -13,7 +13,7 @@
   
   <br />
   まずは下に表示されている<br />
-  <%= image_tag "how_to_use/footer_searching.png", class: "inline mx-1" %>をクリックしてみましょう！<br />
+  <%= image_tag "how_to_use/footer_searching.png", class: "inline mx-1" %>をクリックしましょう！<br />
 </p>
 
 <p>
