--- a/app/views/shared/_spot_form.html.erb
+++ b/app/views/shared/_spot_form.html.erb
@@ -17,7 +17,7 @@
     <%= f.file_field :spot_image, class: "w-full bg-white" %>
 
     <small class="form-text text-white-50">
-      ※ JPEG、PNG、WebP、HEIC形式（10MB以下）のみアップロード可能です
+      ※ JPEG、PNG、WebP形式（10MB以下）のみアップロード可能です
     </small>
   </div>
 
