--- a/app/views/how_to_use/spots/_index.html.erb
+++ b/app/views/how_to_use/spots/_index.html.erb
@@ -13,7 +13,7 @@
       <div class="collapse-title font-semibold">
         <p class="font-bold test-xl">
           ・ 現在地
-          <%= image_tag "current_location.png", class: "inline mx-1" %>
+          <%= image_tag "how_to_use/current_location.png", class: "inline mx-1" %>
         </p>
       </div>
     
@@ -33,7 +33,7 @@
         <p class="font-bold test-xl">
           ・ 登録されたスポット１<br />
           <span class="ml-4"> 
-            <%= image_tag "spot_location.png", class: "inline mx-1" %>
+            <%= image_tag "how_to_use/spot_location.png", class: "inline mx-1" %>
             をクリックしてみよう！
           </span>
         </p>
