20250930_fix:スポット詳細のタグと近くのスポットのComing Soon削除

--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -25,12 +25,7 @@
       </div>
 
       <table class="spot-info">
-        <tr>
-          <th>タグ：</th>
-          <td>
-            <div class="tag">Coming Soon...</div>
-          </td>
-        </tr>
+      <!-- タグ(未実装) -->
         <tr>
           <th>概要：</th>
           <td><%= @spot.summary %></td>
@@ -39,9 +34,7 @@
 
       <div class="map-container" id="map"></div>
 
-      <div class="near-spots-title">近くのスポット(Coming Soon...)</div>
-      <div class="near-spots-place">
-
+      <!-- 近くのスポット(未実装) -->
       </div>
     </div>
   </div>
