20250930_add:使い方/登録したスポット一覧画面追加

--- a/app/views/how_to_use/spots/_new.html.erb
+++ b/app/views/how_to_use/spots/_new.html.erb
@@ -86,7 +86,7 @@
           登録したいスポットがどこに合ったか、GoogleMapをクリックしてスポットを打とう！<br />
           <div class="border rounded-lg">
             <p class="pb-4">
-              GoogleMapをクリックすると<%= image_tag "how_to_use/spot_location.png", class: "inline mx-1" %>マークが付き<br />
+              GoogleMapをクリックすると<%= image_tag "how_to_use/shared/spot_location.png", class: "inline mx-1" %>マークが付いて、<br />
               投稿すると探索ページでその場所にスポットが登録されます！
             </p>
           </div>
@@ -95,8 +95,8 @@
     </div>
   </div>
 
-  <div class="py-2 text-right font-bold">
-    <P>スポット情報を記載したら投稿ボタンを押してみよう！！</P>  
+  <div class="text-right font-bold">
+    <p>上記、記載できたら投稿ボタンを押そう！！</p>  
   </div>
 </div>
 
