20250930_fix:未実装事項文章追加

--- a/app/views/users/registrations/show.html.erb
+++ b/app/views/users/registrations/show.html.erb
@@ -4,12 +4,12 @@
       <h2 class="card-title justify-center text-xl">アカウント情報</h2>
 
       <div class="form-control mb-4">
-        <label class="label text-sm text-gray-600">名前</label>
+        <label class="label text-sm text-gray-600">名前 *現在変更不可</label>
         <p class="text-lg font-semibold"><%= @user.name %></p>
       </div>
 
       <div class="form-control mb-4">
-        <label class="label text-sm text-gray-600">メールアドレス</label>
+        <label class="label text-sm text-gray-600">メールアドレス *現在変更不可</label>
         <p class="text-lg font-semibold"><%= @user_masked_email %> </p>
       </div>
 
