--- a/app/views/shared/common/_header.html.erb
+++ b/app/views/shared/common/_header.html.erb
@@ -1,7 +1,9 @@
 <!-- ヘッダー -->
 <div class="flex items-center justify-between py-2">
   <div class="text-3xl font-bold text-orange-600">
-    <a href="#" class="px-1">Saita<span class="text-yellow-400">Manear</span></a>
+    <%= link_to root_path, class: "px-1" do %>
+      Saita<span class="text-yellow-400">Manear</span>
+    <% end %>
   </div>
 
   <div class="flex flex-row">
