--- a/app/views/spots/new.html.erb
+++ b/app/views/spots/new.html.erb
@@ -33,8 +33,8 @@
   // -------------------------------------------------------
   window.NewMacker = function() {
 
-    // デフォルトの位置（東京駅の緯度・経度）
-    const default_LatLng = { lat: 35.681236, lng: 139.767125 };
+    // デフォルトの位置（さいたま新都心駅の緯度・経度）
+    const default_LatLng = { lat: 35.893987, lng: 139.633504 };
 
     // 地図を表示するためのHTML要素（id="map" のdiv）を取得
     const mapElement = document.getElementById('map');
