20251007_fix:デフォルト緯度経度修正

--- a/app/views/spots/new.html.erb
+++ b/app/views/spots/new.html.erb
@@ -39,7 +39,7 @@
     // 地図を表示するためのHTML要素（id="map" のdiv）を取得
     const mapElement = document.getElementById('map');
 
-    // デフォルト位置を東京駅にして地図を作成
+    // デフォルト位置をさいたま新都心駅にして地図を作成
     map = new google.maps.Map(mapElement,{
       center: default_LatLng,
       zoom: 15,
